# wedid_chain

./: .gitignore  Cargo.toml  customSpec.json  customSpecRaw.json  customSpec_wedid_dev.json  启动测试网.md  备忘.md
.github/workflows/: build_linux_release.yml
client/db/: Cargo.toml
client/rpc/: Cargo.toml
client/rpc-core/: Cargo.toml
frame/evm-auditor/: Cargo.toml
frame/evm-auditor/src/: lib.rs
frame/validator-set/: Cargo.toml
frame/validator-set/src/: lib.rs
template/node/: Cargo.toml
template/node/src/: chain_spec.rs
template/runtime/: Cargo.toml
template/runtime/src/: lib.rs
实现设计/: WeDID单向跨链交互-2022-8-15.pptx  WeDID合规监管框架-2022-8-16.pptx
